# free-genai-bootcamp-2025

./: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.yml  example.csv  example.json  example.txt  package.json  pre-push  prometheus.yml
.cursor/rules/: flask.mdc
.github/workflows/: backend-tests.yml  ci-cd.yaml  main.yml
.husky/: pre-commit
backend-flask/: .dockerignore  .flake8  .flake8.bak  .gitignore  Dockerfile  README.md  app.py  config.py  pyproject.toml  tasks.py
backend-flask/.hooks/: pre-push
backend-flask/app/: __init__.py  config.py  extensions.py  middleware.py  models.py  swagger.py
backend-flask/app/models/: __init__.py  database.py  group.py  word.py  word_group.py
backend-flask/app/routes/: __init__.py  dashboard.py  groups.py  vocabulary.py  words.py
backend-flask/app/services/: openai_service.py
backend-flask/app/static/: swagger.json
backend-flask/app/templates/: api_docs.html  base.html  endpoint_docs.html  swagger_ui.html
backend-flask/app/utils/: __init__.py  guardrails.py  langchain_guardrails.py  middleware.py  response.py  validators.py
backend-flask/docs/: new-backend-technical-specs.md  plan_generated_with_cursor.md
backend-flask/migrations/: 001_init.sql
backend-flask/scripts/: run_tests.sh
backend-flask/seeds/: groups_seed.json  words_groups_seed.json  words_seed.json
backend-flask/tests/: conftest.py  test_api.py  test_db.py
backend-flask/tests/models/: test_models.py
backend-flask/tests/routes/: test_groups.py  test_routes.py  test_vocabulary.py
backend-flask/tests/services/: test_openai_integration.py  test_openai_service.py
backend-flask/tests/utils/: test_guardrails.py  test_guardrails_integration.py  test_langchain_guardrails.py  test_middleware.py  test_validators.py
docs/: RAG-LLM-fine-tuning.md  ci-cd-flow.md  romanian-lang.characteristics.md  romanian-llm-architecture.md
frontend-react/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend-react/src/: App.tsx
frontend-react/src/api/: index.ts
frontend-react/src/components/settings/: VocabImporter.tsx
frontend-react/src/components/ui/: custom-card.tsx  pagination.tsx
frontend-react/src/config/: toast.ts
frontend-react/src/hooks/: use-queries.ts
frontend-react/src/pages/: Feedback.tsx  Groups.tsx  Privacy.tsx  Sessions.tsx  Settings.tsx  StudyActivities.tsx  Terms.tsx
frontend-react/src/pages/__tests__/: Groups.test.tsx  Settings.test.tsx  StudyActivities.test.tsx  Words.test.tsx
frontend-react/src/pages/study-activities/: vocabulary-game.tsx  vocabulary.test.tsx
frontend-react/src/pages/study-activities/__tests__/: vocabulary-game.test.tsx  vocabulary.test.tsx
genai-architecting/: README.md
lang-portal/backend-flask/: README.md  backend-technical-specs.md  pyproject.toml  tasks.py
lang-portal/backend-flask/app/: __init__.py  config.py  swagger.py
lang-portal/backend-flask/app/routes/: __init__.py  dashboard.py  groups.py  words.py
lang-portal/backend-flask/app/utils/: errors.py
lang-portal/backend-flask/docs/: backend-technical-specs.md
lang-portal/backend-flask/migrations/: 002_create_tables.sql
lang-portal/backend-flask/tests/: test_api.py
lang-portal/backend-flask/tests/models/: test_models.py
lang-portal/frontend-react/: README.md  frontedn-technical-specs.md  jest.config.ts  package.json
lang-portal/frontend-react/src/: index.css
lang-portal/frontend-react/src/components/: ErrorBoundary.tsx  Footer.tsx  Layout.tsx  Navigation.tsx
lang-portal/frontend-react/src/components/groups/: CreateGroupDialog.tsx  GroupsTable.tsx
lang-portal/frontend-react/src/components/ui/: custom-breadcrumb.tsx  table.tsx
lang-portal/frontend-react/src/config/__tests__/: toast.test.tsx
lang-portal/frontend-react/src/examples/: ErrorHandlingExample.tsx
lang-portal/frontend-react/src/lib/: errors.ts  i18n.ts
lang-portal/frontend-react/src/pages/: About.tsx  GroupDetails.tsx  Groups.tsx  Index.tsx  StudyActivityDetails.tsx  Support.tsx  WordDetails.tsx  Words.tsx
lang-portal/frontend-react/src/routes/: config.tsx
lang-portal/frontend-react/src/test/: setup.ts
lang-portal/frontend-react/src/types/: group.ts  vocabulary-game.ts
opea-comps/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini
opea-comps/.github/workflows/: main.yml
opea-comps/.venvScriptsactivate/: pyvenv.cfg
opea-comps/comps/: __main__.py  embedding.py  llm.py  mega.py  service.py
opea-comps/mega-service/src/: app.py
opea-comps/src/comps/: __init__.py  __main__.py
opea-comps/tests/: test_service.py
scripts/: pre-push.py
sentence-constructor/: README.md
sentence-constructor/MetaLama/: README.md
sentence-constructor/chatGPT/: README.md  prompt.md
sentence-constructor/claude/: README.md
sentence-constructor/utils/: core-grammar.txt  core-vocab.txt  example.xml
vocab-importer/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
vocab-importer/myenv/: pyvenv.cfg
vocab-importer/src/: config.py  dependencies.py  main.py  monitoring.py
vocab-importer/src/errors/: exceptions.py
vocab-importer/src/middleware/: rate_limit.py
vocab-importer/src/schemas/: vocabulary.py
vocab-importer/src/services/: backend_service.py  file_processor.py
vocab-importer/src/services/processors/: base.py  json_processor.py
vocab-importer/src/utils/: vocab.json
vocab-importer/static/css/: style.css
vocab-importer/templates/: index.html
vocab-importer/tests/: run_tests.py  test_main.py
vocab-importer/vocab_importer/: main.py
writing-practice/: .gitignore  README.md
writing-practice/cdk/: app.py  setup.py
writing-practice/cdk/app/: .env.example  .gitignore  000_Learn_Romanian.py  01_Romanian_to_English.py  02_Image_Translation.py  Dockerfile  config.py  init_streamlit_app.py  requirements.txt
(+5 files in other folders)
