[tool.poetry]
name = "comps"
version = "0.1.0"
description = "OpenAI Components"
authors = ["Ramona <ramona.mironescu@gmail.com>"]
readme = "README.md"
packages = [{include = "comps"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
httpx = "^0.27.0"
requests = "^2.31.0"
fastapi = {extras = ["all"], version = "^0.110.0"}
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
source = ["comps"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
show_missing = true
fail_under = 80 