[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vocab_importer"
version = "0.1.0"
description = "A tool for importing and managing vocabulary"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.18"
python-dotenv = "^1.0.0"
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.8"
safety = "^2.3.5"
pytest-asyncio = "^0.23.5"
pre-commit = "^4.1.0"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=vocab_importer --cov-report=term-missing --cov-report=html"

[tool.poetry.scripts]
test = "pytest:main"
format = "black:main"
lint = "flake8:main"
sort = "isort:main"