[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vocab-importer"
version = "0.1.0"
description = "Vocabulary import microservice"
authors = ["Ramona Gawawarwala <ramona.gawawarwala@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
httpx = "^0.26.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-json-logger = "^2.0.7"
tenacity = "^8.2.3"
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.8"
safety = "^2.3.5"
pre-commit = "^4.1.0"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = """
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --asyncio-mode=auto
"""

[tool.poetry.scripts]
test = "pytest:main"
format = "black:main"
lint = "flake8:main"
sort = "isort:main"