[tool.poetry]
name = "lang-portal-backend"
version = "0.1.0"
description = "Backend API for language learning portal"
authors = ["Ramona"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-jwt-extended = "^4.7.1"
flask-cors = "^5.0.0"
flask-limiter = "^3.10.1"
invoke = "^2.2.0"
flask-swagger-ui = "^4.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
